<resources>
    <string name="app_name">Lophoco Book</string>
    <string name="title_setting">SETTING</string>
    <string name="title_bluetooth">BLUETOOTH</string>
    <string name="title_search">SEARCH</string>
    <string name="title_send">SEND</string>
    <string name="title_receive">RECEIVE</string>
    <string name="title_synchronization">SYNCHRONIZATION</string>
    <string name="message_empty_picture_data">Post pictures of Your happy moments</string>
    <string name="message_question_delete_data">Do You want to delete this?</string>
    <string name="message_connection_failed">Unable to connect device</string>
    <string name="message_connection_lost">Device connection was lost</string>
    <string name="message_connect_to_device">Connect to </string>
    <string name="message_ready_to_transfer_file">Ready to transfer file to </string>
    <string name="message_not_enable_bluetooth">you need to enable bluetooth to send photo</string>
    <string name="message_not_discovery_enable">you need to permit Bluetooth permission</string>
    <string name="message_search_fail">Please You must ready for connected device</string>
    <string name="message_receive_complete">Complete to receive Lophoco Book</string>
    <string name="message_send_complete">Complete to send Lophoco Book</string>
    <string name="message_warning_add_picture_7">Photo can be added up to 7</string>
    <string name="message_receive_fail">Fail to receive Lophoco Book</string>
    <string name="message_send_fail">Fail to send Lophoco Book</string>

    <string name="message_data_send_information">Attempting to send book to</string>
    <string name="message_data_receive_information">Attempting to receive book from</string>
    <string name="message_splash">Put your memories in Lophoco book</string>
    <string name="message_check_permission">Please grant permission to execute the application.</string>

    <string name="message_synchronization_end">After the countdown is finished, the synchronization complete. But if you want to sync right away, click on the Apply Now button and make a payment.</string>
    <string name="message_synchronization_complete">Syncronize Complete. Enjoy Lophoco book :)</string>
    <string name="message_timer_setting_warning">Please Use the date, time and time zone provided by your network.\nCheck Automatic date and time.</string>
    <string name="message_data_success">Success</string>
    <string name="message_data_fail">Fail</string>
    <string name="message_iab_wrong_product">you can`t make purchase.</string>
    <string name="message_iab_aleady_buy_product">You already purchased this item.</string>
    <string name="message_warning_synchronize_cancel">Do you Want to leave?\nIf you leave now, the synchronization will not work.</string>
    <string name="product_is_null">Your purchase cannot be completed. \nIn-app purchases are disabled on your device. </string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_send_book">SEND BOOK</string>
    <string name="button_receive_book">RECEIVE BOOK</string>
    <string name="button_search">Search</string>
    <string name="button_apply_now">Apply Now</string>

    <string name="text_photo">Photo</string>
    <string name="text_date">Date</string>
    <string name="text_comment">Comment</string>
    
    <string name="text_hour">h</string>
    <string name="text_minute">m</string>
    <string name="text_second">s</string>

</resources>
