<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="@dimen/cardview_compat_inset_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_e6ebeb"
            android:orientation="vertical">

            <com.ssomai.android.scalablelayout.ScalableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_f2f2f2"
                app:scale_base_height="200"
                app:scale_base_width="1280">

                <TextView
                    android:id="@+id/_searchTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_search"
                    android:textColor="@color/color_606565"
                    app:scale_height="196"
                    app:scale_left="0"
                    app:scale_textsize="70"
                    app:scale_top="0"
                    app:scale_width="1280" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_d9dede"
                    app:scale_height="4"
                    app:scale_left="0"
                    app:scale_top="196"
                    app:scale_width="1280" />

            </com.ssomai.android.scalablelayout.ScalableLayout>

            <com.ssomai.android.scalablelayout.ScalableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scale_base_height="800"
                app:scale_base_width="1280">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/_searchListview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:scale_top="0"
                    app:scale_left="0"
                    app:scale_width="1280"
                    app:scale_height="800"/>
                <TextView
                    android:id="@+id/_searchFailMessageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_search_fail"
                    android:gravity="center"
                    android:textColor="@color/color_606565"
                    app:scale_top="0"
                    app:scale_left="0"
                    app:scale_width="1280"
                    app:scale_height="800"
                    app:scale_textsize="50"
                    android:visibility="gone"/>
                <com.littlefox.library.view.dialog.ProgressWheel
                    android:id="@+id/_searchLoadingProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:matProg_barColor="@color/color_4a9ebd"
                    app:matProg_progressIndeterminate="true"
                    app:scale_height="150"
                    app:scale_left="0"
                    app:scale_top="0"
                    app:scale_width="150" />
            </com.ssomai.android.scalablelayout.ScalableLayout>

            <com.ssomai.android.scalablelayout.ScalableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_f2f2f2"
                app:scale_base_height="150"
                app:scale_base_width="1280">

                <TextView
                    android:id="@+id/_buttonSearchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/button_search"
                    android:textColor="@color/color_4a9ebd"
                    app:scale_height="150"
                    app:scale_left="800"
                    app:scale_textsize="50"
                    app:scale_top="0"
                    app:scale_width="200" />

                <TextView
                    android:id="@+id/_buttonCancelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/button_cancel"
                    android:textColor="@color/color_4a9ebd"
                    app:scale_height="150"
                    app:scale_left="1050"
                    app:scale_textsize="50"
                    app:scale_top="0"
                    app:scale_width="200" />
            </com.ssomai.android.scalablelayout.ScalableLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>